// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Treeview component (inherit) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="inherit"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (large) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="large"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (medium) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="medium"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (normal) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (small) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (xlarge) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="xlarge"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (xsmall) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="xsmall"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (xxlarge) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="xxlarge"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Treeview component (xxsmall) 1`] = `
<Treeview
  addAsFirstChild={true}
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  defaultTitle="New Title"
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height="15em"
  hidden={false}
  id={null}
  isVirtualized={true}
  kbAdd="ctrl+alt+n"
  kbCollapseAll="ctrl+-"
  kbDelete="ctrl+alt+d"
  kbExpandAll="ctrl+="
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight="15em"
  minWidth={null}
  noborder={false}
  nodeWidth="20em"
  noedit={false}
  nohover={false}
  nopropagation={false}
  nosearch={false}
  notheme={false}
  notooltip={false}
  obj="Treeview"
  onAdd={[Function]}
  onChange={[Function]}
  onCollapse={[Function]}
  onDelete={[Function]}
  onExpand={[Function]}
  onInit={[Function]}
  onSearch={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={false}
  selectNew={true}
  selected={false}
  sizing="xxsmall"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  treeData={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 1,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 2,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 3,
            "parent": [Circular],
            "parentId": 0,
            "title": "1.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 0,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "1.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 5,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 6,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 7,
            "parent": [Circular],
            "parentId": 4,
            "title": "2.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 4,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "2.0",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 9,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.1",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 10,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.2",
          },
          Object {
            "children": Array [],
            "data": [Circular],
            "id": 11,
            "parent": [Circular],
            "parentId": 8,
            "title": "3.3",
          },
        ],
        "data": [Circular],
        "expanded": true,
        "id": 8,
        "parent": t {
          "_options": Object {
            "children": Array [],
            "color": 1,
            "data": null,
            "id": null,
            "left": null,
            "parent": null,
            "parentId": null,
            "right": null,
          },
          "children": Array [],
          "color": 1,
          "data": null,
          "id": null,
          "left": null,
          "parent": null,
          "parentId": null,
          "right": null,
        },
        "parentId": null,
        "title": "3.0",
      },
    ]
  }
  usehidden={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Treeview props object 1`] = `
Object {
  "addAsFirstChild": true,
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "defaultTitle": "New Title",
  "direction": "top",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": "15em",
  "hidden": false,
  "id": null,
  "isVirtualized": true,
  "kbAdd": "ctrl+alt+n",
  "kbCollapseAll": "ctrl+-",
  "kbDelete": "ctrl+alt+d",
  "kbExpandAll": "ctrl+=",
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": "15em",
  "minWidth": null,
  "noborder": false,
  "nodeWidth": "20em",
  "noedit": false,
  "nohover": false,
  "nopropagation": false,
  "nosearch": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Treeview",
  "onAdd": [Function],
  "onChange": [Function],
  "onCollapse": [Function],
  "onDelete": [Function],
  "onExpand": [Function],
  "onInit": [Function],
  "onSearch": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "padding": null,
  "ripple": false,
  "selectNew": true,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {
    "backgroundColor": "#ffffff",
    "borderColor": "#c0c0c0",
    "buttonColor": "#666666",
    "chevronColor": "#cccccc",
    "color": "#000000",
    "fontFamily": "OpenSans, Georgia, serif",
    "headerBackgroundColor": "#004358",
    "headerForegroundColor": "#ffffff",
    "headerHoverColor": "#ffe11a",
    "hoverColor": "#c0c0c0",
    "inputBorderColor": "#c0c0c0",
    "itemHoverColor": "#bedb39",
    "outlineColor": "#51cbee",
    "searchFocus": "#51cbee",
    "searchMatch": "#fd7400",
    "selectedBackgroundColor": "#1f8a70",
    "selectedForegroundColor": "#ffe11a",
    "titleBarBackgroundColor": "#004358",
    "titleBarForegroundColor": "#ffe11a",
    "tooltipBackgroundColor": "#708090",
    "tooltipForegroundColor": "#ffffff",
    "transitionDelay": "0.33s",
  },
  "tooltip": null,
  "top": null,
  "treeData": Array [],
  "usehidden": true,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Treeview props object 2`] = `
Object {
  "children": null,
  "matches": Array [],
  "search": "",
  "searchFocusIndex": 0,
  "searchFoundCount": 0,
  "selectedId": null,
  "sizing": "normal",
  "style": Object {},
}
`;
